project set up: initial files and settings and description (#1)
* initial commit, lost of mess, not building yet

* updated main code base

* fully functional docker compose with auth service, getting authorities from auth service with correct JWT

* added logic for the sample controller

* added dummy creation of the currencies and prepared for samples

* added dummy data for the DB

* controller advice and response object

* some tests skeleton

* added sample service sample tests

* added sample controller test

* added working controller tests and introducing dummy object as a component instead of static final class

* removed extra exceptions and util methods

* added basic documentation to README.rd file

* added comments and method descriptions

* saome README updates with API examples

* revert changes regarding application.yml

* updated some documentation